# Docker-Django-VueJs-Mysql

./: .env  .gitignore  README.md  docker-compose.yml  fly  manage
backend/: Dockerfile  requirements.txt  supervisord.conf
backend/app/: pyproject.toml
backend/app/config/: settings.py
backend/app/users/: models.py
backend/app/users/migrations/: 0001_initial.py
frontend/: Dockerfile  entry_point.sh
frontend/app/: package-lock.json  package.json
