[tool.poetry]
name = "djangotemplate"
version = "0.1.0"
description = ""
authors = ["Fernando Cruz <quattrococodrilo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
requests = "^2.28.1"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
